--- a/ChatPrjTest/src/main/webapp/WEB-INF/index.html
+++ b/ChatPrjTest/src/main/webapp/WEB-INF/index.html
@@ -1,1 +1,10 @@
-¾È³ç ³ª¾ß
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+ë‚˜ì—¬
+</body>
+</html>
